<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Lost</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_personal">Personal profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--activity_main_drawer-->
    <string name="main_drawer_item_maps">Map </string>
    <string name="main_drawer_item_friends">Friends</string>
    <string name="main_drawer_item_emergency">Emergency</string>
    <string name="main_drawer_item_settings">Settings</string>
    <string name="main_drawer_item_aboutUs">About us</string>
    <string name="main_drawer_item_share">Share</string>
    <string name="title_activity_maps">Map</string>


    <string name="list_item_enable">Show on Map</string>

    <string name="add_friend_name">Name</string>
    <string name="add_friend_qr_descriptor">QR scanner</string>

    <string name="emergency_location_text">Your current location:</string>
    <string name="emergency_dummy_location">48.334986, 14.323784</string>

    <string name="personal_id_text">Your ID:</string>
    <string name="personal_qr_code_descriptor">Your personal QR code</string>
    <string name="personal_dummy_qr_code">fe80:12::14</string>

    <string name="login_button">Log In</string>
    <string name="create_button">Create new Account</string>
    <string name="email">Email :</string>
    <string name="password">Passwort :</string>
    <string name="showPassword">Show Password</string>
    <string name="resetPassword">Forgot Password?</string>

    <string name="logOut">Log Out</string>

    <string name="tracking_enabled_notif">Tracking is now enabled</string>
    <string name="firebase_path">Users</string>

    <string name="checkID">Please check the ID of your friend for correctness!</string>


    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
</resources>
